# scaffold-branch-demo

./: Dockerfile  build.yaml  pyproject.toml
.github/workflows/: dagster-plus-deploy.yml
src/scaffold_branch_demo/defs/postgres_to_snowflake_ingestion/: MISSION.md  defs.yaml
