[project]
name = "scaffold_branch_demo"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-pipes",
    "dagster-shared",
    "dagster-cloud",
    "dagster-embedded-elt>=0.27.4",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-graphql",
    "dagster-dg-core",
    "dagster-dg-cli",
    "dagster-cloud-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "scaffold_branch_demo"
registry_modules = [
    "scaffold_branch_demo.components.*",
]

[tool.uv.sources]
dagster-dg-cli = { path = '/Users/ben/repos/dagster/python_modules/libraries/dagster-dg-cli', editable = true }
